--- a/Ex03.ConsoleUI/Ex03.ConsoleUI.csproj
+++ b/Ex03.ConsoleUI/Ex03.ConsoleUI.csproj
@@ -35,5 +35,15 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Compile Include="Enums\eUserChoices.cs" />
+    <Compile Include="Program.cs" />
+    <Compile Include="UserInterface.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="Ex03.GarageLogic">
+      <HintPath>..\Ex03.GarageLogic\bin\Debug\Ex03.GarageLogic.dll</HintPath>
+    </Reference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
